# chiaroscuro

./: README.md  app  meson.build
data/: com.github.arkaitzsilva.chiaroscuro.gschema.xml  gtk-variant-switcher.gschema.xml  meson.build
src/: Main.vala  meson.build
src/configs/: Constants.vala  Settings.vala
